tests/fixtures/invalid/pow_none_list_int.py
# Cannot call pow() with None, List[int], Int
x = pow(None, [1, 2, 3], 1)
